# HealthCore

./: .env.example  .gitignore  DEVELOPMENT.md  NUTRITION_GAME_DOCUMENTATION.md  NutritionGameExample.html  README.md  README_USAGE.md  debug-script.js  pyproject.toml  start-healthcore.sh
Archive/: 1.Body_System.md  30.Interaction_Module.md  4.Data_Context_Module.md  7.Nutrient_Vector_Module.md  Body_System_Justification.md  Foundational_Research.md  HealthCore-Module-Priority-Tracker.md  HealthCore_Application_Structure.md  ModuleDiscussionTracker.md  Nutrition_Acquisition_Vectors.md  original_architecture.md
CurrentDesignFramework/: enhanced-nutrition-game-framework.md  simple-daily-schedule.md  technical-implementation-guide.md
Trash/: INTEGRATION_FIXES.md  Instructions.md  anteacore-button-update.md
backend/: __init__.py  main.py  test_api.py
backend/data/: __init__.py  missions.py
backend/models/: __init__.py  nutrition.py
backend/routers/: __init__.py  game.py  missions.py  receptors.py
backend/services/: __init__.py  game_service.py  mission_service.py  receptor_service.py
backend/utils/: data_parser.py
data/: complete_receptor_mapping.md
frontend/: debug-state.html  index.html  package-lock.json  package.json  test-backend.html  test-missions.html  tsconfig.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css  main.tsx
frontend/src/components/: BodySystemsNutrition.module.css  BodySystemsNutrition.tsx
frontend/src/data/: missions.ts
frontend/src/hooks/: useAIInsights.ts  useCannabisEffects.ts  useMissionProgress.ts
nutrition-tracker/: .gitignore  ARCHITECTURE_REFACTOR.md  README.md  migrate_db.py  requirements.txt  reset_db.py  run.py  test_startup.py
nutrition-tracker/app/: database.py  main.py  models.py
project_knowledge/: projectoverview.md
project_knowledge/architecture/: HealthCore-AnteaCore-Integration-Assessment.md  HealthCore-Complexity-Simplicity-Bridge.md  healthcore-enum-registry.json
project_knowledge/decisions/: synergistic-body-systems-rotation.md
project_knowledge/modules/: 2.Food_Tracking.md  3.Daily_Record_Module.md  5.Requirements_Calculator_Module.md  6.Progress_Module.md
project_knowledge/research/: Comprehensive_Body_Systems_Nutrition_Research.md  Nutritional_Flexibility_Metabolic_Buffers.md  Vector_Coordination_Principles.md
(+37 files in other folders)
