[tool.poetry]
name = "healthcore-backend"
version = "0.1.0"
description = "HealthCore Body Systems Nutrition Intelligence - Backend API"
authors = ["HealthCore Team"]
readme = "README.md"
packages = [{include = "backend"}]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
supabase = "^2.3.0"
python-multipart = "^0.0.9"
websockets = "^14.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
asyncio = "^3.4.3"
anteacore-shared = "^1.0.0b1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.2"
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true